--- a/proiect/assets/css/style.css
+++ b/proiect/assets/css/style.css
@@ -5,21 +5,25 @@ html {
 
 nav {
     width: 100%;
-    height: 50px;
-    background-color: brown;
+    height: 60px;
+    background-color: rgba(165, 42, 42, 0.862);
+    font-family: 'Noto Sans', sans-serif !important;
+    text-align: center;
 }
 
 nav ul li {
     float: left;
     display: inline-block;
     list-style: none;
-    padding: 14px 25px;
-    
+    padding: 10px 35px;
+    margin-top: 8px;
 }
 
 .active, nav ul li:hover {
     background-color: rgb(54, 189, 243);
     font-weight: bold;
+    margin-right: 5px;
+    border-radius: 15px;
 }
 
 nav ul {
@@ -45,4 +49,8 @@ tr:nth-child(2n) {
 
 tr:nth-child(2n+1) {
     background-color: aquamarine;
+}
+
+a {
+    text-decoration: none;
 }
