--- a/proiect/assets/css/style.css
+++ b/proiect/assets/css/style.css
@@ -53,3 +53,16 @@ tr:nth-child(2n+1) {
 a {
     text-decoration: none;
 }
+
+ul {
+    list-style-type: none;
+}
+
+ul li > ul li{
+    display: none;
+}
+
+ul li > li:hover {
+    display: inline-block;
+    
+}
